--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,14 @@
 
 @layer components {}
 
+body {}
+
 div, h1, p {
     transition: 1s ease;
+}
+
+.banner, .banner-div-animation, .body-background {
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
 
 @media(max-width:768px) {
@@ -92,7 +98,7 @@ div, h1, p {
     overflow: hidden;
     /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange;
-    /* The typwriter cursor */
+    /* The typewriter cursor */
     white-space: nowrap;
     /* Keeps the content on a single line */
     /* margin: 0 auto; */
