--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,14 @@ div, h1, p {
     background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
 
+.body-content {
+    width: 75%;
+    border-radius: 1rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    padding: 2.5rem;
+}
+
 @media(max-width:768px) {
     .list-navbar {
         display: none;
