--- a/src/index.css
+++ b/src/index.css
@@ -37,9 +37,12 @@ div, h1, p, ul, li, button {
 
 .body-content {
     border-radius: 1rem;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+    margin: 5rem 0;
     padding: 2.5rem;
+}
+
+.banner-icon:hover {
+    color: #fff;
 }
 
 @media(max-width:768px) {
